# ai-engineering

./: Cargo.toml  Makefile  README.md  config.yaml
haiku/: Cargo.toml
haiku/src/: config.rs  device.rs  main.rs
llm-inference/: Cargo.toml  config.yaml
llm-inference/src/: config.rs  device.rs  main.rs  prompt.rs
logits/: Cargo.toml
logits/src/: main.rs  table.rs
sakila/: Cargo.toml  Makefile  config.yaml
sakila/src/: chat.rs  config.rs  db.rs  device.rs  main.rs
sakila/src/agent/: mod.rs  sql.rs
sakila/src/llm/: mod.rs  stream.rs
tokens/: Cargo.toml
tokens/src/: config.rs  main.rs
