[workspace]
resolver = "3"
members = ["haiku","logits","tokens"]

[workspace.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2" }
color-eyre = "0.6.5"
config = "0.15.19"
hf-hub =  "0.4.3"
rustls = "0.23.36"
serde = "1.0.228"
tabled = "0.20.0"
tokenizers = "0.22.2"
tokio = "1.49.0"
tracing-subscriber = "0.3.22"
