[package]
name = "haiku"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["candle-core/cuda", "candle-core/cudnn", "candle-transformers/cuda", "candle-transformers/cudnn", "candle-transformers/flash-attn"]
metal = ["candle-core/metal", "candle-transformers/metal"]
mkl = ["candle-core/mkl", "candle-transformers/mkl"]
accelerate = ["candle-core/accelerate", "candle-transformers/accelerate"]

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
color-eyre = { workspace = true }
config = { workspace = true, features = ["yaml"] }
hf-hub = { workspace = true, features = ["rustls-tls", "tokio"] }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tabled = { workspace = true }
tokenizers = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
