[package]
name = "sakila"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }
color-eyre = "0.6.5"
colored = "3.1.1"
config = { version = "0.15.19", features = ["yaml"] }
futures-util = "0.3.31"
hf-hub =  { version = "0.4.3", features = ["rustls-tls", "tokio"] }
indicatif = "0.18.3"
reqwest = { version = "0.13.1", features = ["rustls", "stream"] }
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "tls-rustls-aws-lc-rs"] }
tera = "1.20.1"
tokenizers = { version = "0.22.2", features = ["rustls-tls"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
default = ["auto"]
auto = []
cuda = ["candle-core/cuda", "candle-core/cudnn", "candle-transformers/cuda", "candle-transformers/cudnn", "candle-transformers/flash-attn"]
metal = ["candle-core/metal", "candle-transformers/metal"]
mkl = ["candle-core/mkl", "candle-transformers/mkl"]
accelerate = ["candle-core/accelerate", "candle-transformers/accelerate"]

# Auto-select features based on target OS
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.2", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9.2", features = ["metal", "accelerate"] }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
candle-core = { version = "0.9.2", features = ["mkl"] }
candle-transformers = { version = "0.9.2", features = ["mkl"] }
