[package]
name = "tokens"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { workspace = true }
config = { workspace = true, features = ["yaml"] }
hf-hub = { workspace = true, features = ["rustls-tls", "tokio"] }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokenizers = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
